--- a/css/master.css
+++ b/css/master.css
@@ -1,7 +1,7 @@
-.p {
-  color: green;
-}
-
-p {
-  color: red;
+div {
+  background-color: red;
+  background-color: rgb(0 0 0 / 50%);
+  background-color: #ff0000;
+  background-image: url("../imgs/MainAfter.webp");
+  background-repeat: no-repeat;
 }
