--- a/css/master.css
+++ b/css/master.css
@@ -4,4 +4,7 @@ div {
   background-color: #ff0000;
   background-image: url("../imgs/MainAfter.webp");
   background-repeat: no-repeat;
+  /* background-attachment: fixed; */
+  /* background-position: 20% 50%; */
+  background-size: 100% 50%;
 }
