--- a/css/master.css
+++ b/css/master.css
@@ -1,10 +1,20 @@
 div {
-  background-color: red;
-  background-color: rgb(0 0 0 / 50%);
-  background-color: #ff0000;
-  background-image: url("../imgs/MainAfter.webp");
-  background-repeat: no-repeat;
-  /* background-attachment: fixed; */
-  /* background-position: 20% 50%; */
-  background-size: 100% 50%;
+  background-color: #ddd;
+
+  /* top right bottom left */
+  padding: 10px;
+  /* => padding: 10px 10px 10px 10px;  */
+
+  /* top right bottom left */
+  padding: 10px 20px;
+  /* => padding: 10px 20px 10px 20px; */
+
+  /* top right bottom left */
+  padding: 10px 20px 15px;
+  /* => padding: 10px 20px 15px 20px; */
+
+  padding-top: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
 }
