--- a/css/master.css
+++ b/css/master.css
@@ -3,18 +3,13 @@ div {
 
   /* top right bottom left */
   padding: 10px;
-  /* => padding: 10px 10px 10px 10px;  */
-
-  /* top right bottom left */
-  padding: 10px 20px;
-  /* => padding: 10px 20px 10px 20px; */
-
-  /* top right bottom left */
-  padding: 10px 20px 15px;
-  /* => padding: 10px 20px 15px 20px; */
-
-  padding-top: 10px;
-  padding-right: 10px;
-  padding-bottom: 10px;
-  padding-left: 10px;
+  margin: 10px;
+  width: 70%;
+  /*
+    margin-top: auto;
+    margin-right: auto;
+    margin-bottom: auto;
+    margin-left: auto;
+*/
+  margin: auto;
 }
