--- a/css/master.css
+++ b/css/master.css
@@ -5,11 +5,6 @@ div {
   padding: 10px;
   margin: 10px;
   width: 70%;
-  /*
-    margin-top: auto;
-    margin-right: auto;
-    margin-bottom: auto;
-    margin-left: auto;
-*/
   margin: auto;
+  border: 10px solid orange;
 }
