--- a/css/master.css
+++ b/css/master.css
@@ -1,10 +1,7 @@
 div {
   background-color: #ddd;
-
-  /* top right bottom left */
+  width: 300px;
   padding: 10px;
-  margin: 10px;
-  width: 70%;
-  margin: auto;
   border: 10px solid orange;
+  outline: 10px solid blue;
 }
