--- a/css/master.css
+++ b/css/master.css
@@ -1,33 +1,12 @@
-/*
-  inline
-  - do not repsepct width, height
-  - respect padding and margin [ just right + left ]
-  - do not add line break
-  - allow elements before and after it in the same line
-*/
-
-span {
-  background-color: #eee;
-  display: inline-block;
-  padding: 30px;
-  margin: 20px;
-  width: 100px;
-  height: 50px;
+div {
+  background-color: red;
+  margin: 10px 20px;
 }
 
-/*
-  block
-  - take full width if no width
-  - add line break
-  - respect padding, margin, width, height
+.first {
+  visibility: hidden; /* default visible */
+}
 
-  inline
-  - do not repsepct width, height
-  - respect padding and margin [ just right + left ]
-  - do not add line break
-  - allow elements before and after it in the same line
-
-  inline-block
-  - allow elements before and after it in the same line
-  - respect padding, margin, width, height
-*/
+.second {
+  display: none;
+}
