--- a/css/master.css
+++ b/css/master.css
@@ -1,7 +1,11 @@
-div .special {
-  color: red;
-}
+div {
+  background-color: red;
+  padding: 10px;
+  /* display: inline-block;
+  min-width: 400px;
+  max-width: 400px;
+  min-height: 40px;
+  max-height: 100px; */
 
-p {
-  color: blue;
+  width: fit-content;
 }
