overflow - overflow-x and overflow-y

--- a/css/master.css
+++ b/css/master.css
@@ -1,11 +1,9 @@
 div {
-  background-color: red;
-  padding: 10px;
-  /* display: inline-block;
-  min-width: 400px;
-  max-width: 400px;
-  min-height: 40px;
-  max-height: 100px; */
-
-  width: fit-content;
+  width: 150px;
+  height: 150px;
+  background-color: #eee;
+  margin: 20px auto;
+  border-radius: 6px;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
