text - decoration and transform

--- a/css/master.css
+++ b/css/master.css
@@ -1,11 +1,4 @@
 div {
   background-color: #f9f9f9;
-  text-align: center;
-  direction: rtl;
-}
-
-img {
-  width: 60px;
-  height: 60px;
-  vertical-align: middle;
+  text-transform: uppercase;
 }
