--- a/css/master.css
+++ b/css/master.css
@@ -1,4 +1,10 @@
 div {
-  background-color: #f9f9f9;
-  text-transform: uppercase;
+  background-color: #eee;
+  width: 200px;
+  /*  letter-spacing: 2px;
+  text-indent: 100px;
+  line-height: 1.6;
+  word-spacing: 1px;
+  white-space: nowrap; */
+  word-break: break-word;
 }
