--- a/css/master.css
+++ b/css/master.css
@@ -1,12 +1,16 @@
-div {
-  background-color: #eee;
-  width: 200px;
-  padding: 10px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+body {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-div:hover {
-  overflow: visible;
+div {
+  text-align: center;
+  padding: 20px;
+  background-color: #eee;
+  font-size: 20px;
+  border: 2px solid blue;
+}
+
+div p {
+  border: 2px solid;
+  border-color: inherit;
 }
