typography - font family

--- a/css/master.css
+++ b/css/master.css
@@ -1,16 +1,18 @@
-body {
+.serif,
+.sans-serif {
+  padding: 10px;
+  background-color: #eee;
+}
+
+.serif {
+  font-family: "Times New Roman", Times, serif;
+}
+
+.sans-serif {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-div {
-  text-align: center;
-  padding: 20px;
-  background-color: #eee;
-  font-size: 20px;
-  border: 2px solid blue;
-}
-
-div p {
-  border: 2px solid;
-  border-color: inherit;
+@font-face {
+  font-family: "myFont";
+  src: url("myFont.woff2");
 }
