--- a/css/master.css
+++ b/css/master.css
@@ -1,18 +1,14 @@
-.serif,
-.sans-serif {
-  padding: 10px;
-  background-color: #eee;
+html {
+  font-size: 50px;
+}
+body {
+  font-size: 40px;
 }
 
-.serif {
-  font-family: "Times New Roman", Times, serif;
+div {
+  font-size: 5vw;
 }
 
-.sans-serif {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-@font-face {
-  font-family: "myFont";
-  src: url("myFont.woff2");
+div span {
+  font-size: 150%;
 }
