--- a/css/master.css
+++ b/css/master.css
@@ -1,13 +1,8 @@
-body {
-  margin: 0;
+.one {
+  background-color: red;
+  opacity: 0.5;
 }
 
-div {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  text-align: center;
-  background-color: #eee;
-  float: left;
-  width: calc((100% - 90px) / 5);
-  margin-left: 15px;
+.two {
+  background-color: rgb(255 0 0 / 0.1);
 }
