--- a/css/master.css
+++ b/css/master.css
@@ -1,32 +1,22 @@
-div {
-  position: absolute;
-  padding: 10px;
-  text-align: center;
-  width: 100px;
-  color: #fff;
+body {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.one {
-  background-color: red;
-  left: 10px;
-  top: 10px;
+table {
+  width: 100%;
+  border-spacing: 0px;
 }
 
-.two {
+table td {
+  padding: 15px;
+  background-color: #eee;
+  border: 1px solid #d8d8d8;
+}
+
+table thead td {
   background-color: green;
-  left: 15px;
-  top: 15px;
-  z-index: 3;
-}
-
-.three {
-  background-color: blue;
-  left: 20px;
-  top: 20px;
-}
-
-ul {
-  list-style: none;
-  padding-left: 0;
-  margin: 0;
+  color: #fff;
+  font-weight: bold;
+  text-align: center;
+  border-color: #f35246;
 }
