--- a/css/master.css
+++ b/css/master.css
@@ -1,22 +1,41 @@
-body {
-  font-family: Arial, Helvetica, sans-serif;
+.one {
+  background-color: red;
+  color: white;
 }
 
-table {
-  width: 100%;
-  border-spacing: 0px;
-}
-
-table td {
-  padding: 15px;
+.two {
   background-color: #eee;
-  border: 1px solid #d8d8d8;
+  width: 100px;
+  height: 100px;
 }
 
-table thead td {
-  background-color: green;
-  color: #fff;
-  font-weight: bold;
-  text-align: center;
-  border-color: #f35246;
+a {
+  color: green;
+  text-decoration: none;
+}
+
+a:hover {
+  color: red;
+}
+
+.ch:checked + label {
+  color: red;
+  display: none;
+}
+
+a:visited {
+  color: blue;
+}
+
+div:empty {
+  border: 10px solid red;
+}
+
+.in {
+  border: 2px solid black;
+}
+
+.in:focus {
+  border-color: green;
+  outline: none;
 }
