--- a/css/master.css
+++ b/css/master.css
@@ -1,85 +1,12 @@
-.parent {
-  margin-bottom: 20px;
-  overflow: hidden;
-  counter-increment: members-counter;
-}
+/*-webkit- = > Chrome,
+Safari,
+New Opera Version -moz-= > Firefox -ms- = > Ie,
+Edge -o-= > Old Version of Opera */
 
-.one {
-  background-color: #eee;
-  padding: 10px;
-  width: 600px;
-  float: left;
-  position: relative;
-}
-
-.one::before {
-  content: "";
-  width: 0;
-  height: 0;
-  position: absolute;
-  left: -20px;
-  top: 50%;
-  margin-top: -10px;
-  border-width: 10px;
-  border-style: solid;
-  border-color: transparent green transparent transparent;
-}
-
-.one::after {
-  content: counter(members-counter);
-  position: absolute;
-  background-color: red;
-  color: white;
-  width: 20px;
-  height: 20px;
-  text-align: center;
-  font-weight: bold;
-  right: -10px;
-  top: 50%;
-  margin-top: -10px;
-}
-
-.user {
-  background-color: #eee;
-  width: 50px;
-  margin-right: 20px;
-  padding: 10px;
-  height: 55.5px;
-  float: left;
-  font-size: 50px;
-  text-align: center;
-}
-
-/* .one .pipeline {
-  width: 5px;
-  position: absolute;
-  height: 100%;
-  right: -10px;
-  top: 0;
-  background: green;
-}
- */
-
-ul {
-  list-style: none;
-}
-
-ul li {
-  position: relative;
-  padding-left: 10px;
-  margin-bottom: 10px;
-}
-
-ul li:before {
-  content: "";
-  width: 0;
-  height: 0;
-  background-color: white;
-  position: absolute;
-  left: -20px;
-  top: 50%;
-  margin-top: -10px;
-  border-width: 10px;
-  border-style: solid;
-  border-color: transparent green transparent transparent;
+.class  {
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -o-border-radius: 10px;
+  -ms-border-radius: 10px;
+  border-radius: 10px;
 }
