--- a/css/master.css
+++ b/css/master.css
@@ -1,8 +1,8 @@
 div {
-  width: 100px;
-  height: 100px;
-  background-color: green;
+  padding: 20px;
+  background-color: #eee;
   margin: 20px auto;
-  /* border-radius: 50%; */
-  border-top-left-radius: 10px 20px;
+  width: 300px;
+  box-shadow: 10px 10px 10px 0 #f00, 10px 10px 10px 0 #ddd,
+    10px 10px 10px 0 yellow, 10px 10px 10px 0 green;
 }
