--- a/css/master.css
+++ b/css/master.css
@@ -1,8 +1,21 @@
-div {
-  padding: 20px;
-  background-color: #eee;
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.parent {
+  width: 600px;
+  overflow: hidden;
+  background-color: #ddd;
   margin: 20px auto;
+  padding: 20px;
+}
+
+.one {
+  background-color: #eee;
   width: 300px;
-  box-shadow: 10px 10px 10px 0 #f00, 10px 10px 10px 0 #ddd,
-    10px 10px 10px 0 yellow, 10px 10px 10px 0 green;
+  float: left;
+  padding: 10px;
+  border: 10px solid red;
 }
