--- a/css/master.css
+++ b/css/master.css
@@ -4,18 +4,18 @@
   box-sizing: border-box;
 }
 
-.parent {
-  width: 600px;
-  overflow: hidden;
-  background-color: #ddd;
-  margin: 20px auto;
-  padding: 20px;
-}
-
 .one {
   background-color: #eee;
-  width: 300px;
-  float: left;
-  padding: 10px;
-  border: 10px solid red;
+  width: 200px;
+  height: 100px;
+  /* transition-duration: 3s;
+  transition-delay: 0.2s;
+  transition-property: width;
+  transition-timing-function: ease-in-out; */
+  transition: all 0.5s 2s linear;
+}
+
+.one:hover {
+  width: 280px;
+  height: 150px;
 }
