--- a/css/master.css
+++ b/css/master.css
@@ -1,21 +1,7 @@
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+.one {
+  background-color: #eee !important;
 }
 
 .one {
-  background-color: #eee;
-  width: 200px;
-  height: 100px;
-  /* transition-duration: 3s;
-  transition-delay: 0.2s;
-  transition-property: width;
-  transition-timing-function: ease-in-out; */
-  transition: all 0.5s 2s linear;
-}
-
-.one:hover {
-  width: 280px;
-  height: 150px;
+  background-color: #888;
 }
