--- a/css/master.css
+++ b/css/master.css
@@ -1,35 +1,39 @@
-/*
-  CSS Variables
-  - Global variable
-  - Local variable
-  var(Variable Name, Fall Back Value or default value)
-*/
-
-:root {
-  --mainColor: blue;
-  --mainPadding: 10px;
+* {
+  box-sizing: border-box;
 }
 
-.main {
-  background-color: var(--mainColor, black);
-  color: white;
-  padding: calc(20px + var(--mainPadding));
-}
-h2 {
-  color: var(--mainColor);
+.flex {
   background-color: #eee;
-  padding: var(--mainPadding);
-}
-p {
-  color: var(--mainColor);
-  border: 2px solid var(--mainColor);
-  padding: var(--mainPadding);
-}
-a:hover {
-  color: var(--mainColor);
+  width: 660px;
+  padding: 20px;
+  margin: 20px auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap-reverse;
+  flex-flow: row wrap-reverse;
 }
 
-.local {
-  --mainColor: black;
-  background-color: var(--mainColor);
+.flex div {
+  background-color: red;
+  color: white;
+  width: 25%;
+  text-align: center;
+  padding: 20px;
+}
+
+.float {
+  overflow: hidden;
+  background-color: #eee;
+  width: 660px;
+  padding: 20px;
+  margin: 20px auto;
+}
+
+.float div {
+  background-color: red;
+  color: white;
+  float: left;
+  width: 25%;
+  text-align: center;
+  padding: 20px;
 }
