--- a/css/master.css
+++ b/css/master.css
@@ -9,14 +9,13 @@
   margin: 20px auto;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap-reverse;
-  flex-flow: row wrap-reverse;
+  justify-content: space-evenly;
 }
 
 .flex div {
   background-color: red;
   color: white;
-  width: 25%;
+  width: calc(94% / 3);
   text-align: center;
   padding: 20px;
 }
@@ -33,7 +32,9 @@
   background-color: red;
   color: white;
   float: left;
-  width: 25%;
+  width: calc(94% / 3);
   text-align: center;
   padding: 20px;
+  margin-left: 1%;
+  margin-right: 1%;
 }
