--- a/css/master.css
+++ b/css/master.css
@@ -8,14 +8,13 @@
   padding: 20px;
   margin: 20px auto;
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+  align-items: center;
 }
 
 .flex div {
   background-color: red;
   color: white;
-  width: calc(94% / 3);
+  width: calc(100% / 3);
   text-align: center;
   padding: 20px;
 }
@@ -32,9 +31,34 @@
   background-color: red;
   color: white;
   float: left;
-  width: calc(94% / 3);
+  width: calc(100% / 3);
   text-align: center;
   padding: 20px;
-  margin-left: 1%;
-  margin-right: 1%;
+}
+
+.one {
+  height: 80px;
+}
+
+.two {
+  height: 120px;
+}
+
+.center {
+  background-color: blue;
+  color: white;
+  width: 300px;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.old-center {
+  background-color: red;
+  color: white;
+  width: 300px;
+  height: 200px;
+  line-height: 200px;
+  text-align: center;
 }
