--- a/css/master.css
+++ b/css/master.css
@@ -4,19 +4,18 @@
 
 .flex {
   background-color: #eee;
-  width: 660px;
-  height: 400px;
+  width: 900px;
   padding: 20px;
   margin: 20px auto;
   display: flex;
-  flex-wrap: wrap;
-  align-content: space-between;
 }
 
 .flex div {
   background-color: red;
   color: white;
-  width: 200px;
+  width: 80px;
   text-align: center;
+  margin-right: 5px;
   padding: 20px;
+  flex-grow: 1;
 }
