flex box child - flex basis, flex shorthand

--- a/css/master.css
+++ b/css/master.css
@@ -4,18 +4,21 @@
 
 .flex {
   background-color: #eee;
-  width: 900px;
+  width: 800px;
   padding: 20px;
   margin: 20px auto;
-  display: flex;
+  display: inline-flex;
 }
 
 .flex div {
   background-color: red;
   color: white;
-  width: 80px;
   text-align: center;
   margin-right: 5px;
   padding: 20px;
-  flex-grow: 1;
+  width: 80px;
+}
+
+.in {
+  display: inline-block;
 }
