--- a/css/master.css
+++ b/css/master.css
@@ -2,29 +2,32 @@
   box-sizing: border-box;
 }
 
-/* img {
-  transition: 0.3s;
-  filter: grayscale(100%);
+div {
+  width: 400px;
+  height: 200px;
+  background-color: #eee;
+  margin: 20px auto;
+  position: relative;
+  padding: 10px;
 }
 
-img:hover {
-  filter: grayscale(0);
-} */
-
-/* img {
-  transition: 0.3s;
-  filter: blur(4px);
-}
-
-img:hover {
-  filter: blur(0);
-} */
-
-img {
-  transition: 0.3s;
-  filter: invert(100%);
-}
-
-img:hover {
-  filter: invert(0);
+div:before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: 0;
+  width: 100%;
+  height: 10px;
+  background-color: red;
+  background-image: linear-gradient(
+    to right,
+    #2980b9 20%,
+    #27ae60 20%,
+    #27ae60 40%,
+    #d35400 40%,
+    #d35400 60%,
+    #8e44ad 60%,
+    #8e44ad 80%,
+    #c0392b 80%
+  );
 }
