--- a/css/master.css
+++ b/css/master.css
@@ -1,33 +1,7 @@
-* {
-  box-sizing: border-box;
+a:hover {
+  color: red;
 }
 
-div {
-  width: 400px;
-  height: 200px;
-  background-color: #eee;
-  margin: 20px auto;
-  position: relative;
-  padding: 10px;
-}
-
-div:before {
-  content: "";
-  position: absolute;
-  top: -5px;
-  left: 0;
-  width: 100%;
-  height: 10px;
-  background-color: red;
-  background-image: linear-gradient(
-    to right,
-    #2980b9 20%,
-    #27ae60 20%,
-    #27ae60 40%,
-    #d35400 40%,
-    #d35400 60%,
-    #8e44ad 60%,
-    #8e44ad 80%,
-    #c0392b 80%
-  );
+a {
+  pointer-events: none;
 }
