--- a/css/master.css
+++ b/css/master.css
@@ -8,7 +8,11 @@
   height: 500px;
   background-color: #eee;
   display: grid;
-  grid-template-columns: repeat(2, auto) repeat(1, 1fr) 2fr;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  /* row-gap: 10px;
+  column-gap: 10px; */
+  gap: 10px;
 }
 
 .parent div {
