--- a/css/master.css
+++ b/css/master.css
@@ -1,25 +1,55 @@
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
-.parent {
-  margin: 20px auto;
-  width: 800px;
-  height: 500px;
+ul {
+  list-style: none;
+}
+
+ul li {
+  display: inline-block;
+}
+
+.page {
+  height: 100vh;
   background-color: #eee;
   display: grid;
-  grid-template-columns: repeat(4, auto);
-  grid-template-rows: repeat(3, auto);
-  gap: 10px;
-  justify-content: space-between;
-  align-content: space-between;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: 50px auto 50px;
+  grid-template-areas:
+    "logo logo nav nav nav nav nav nav nav nav"
+    "cont cont cont cont cont cont cont . aside aside"
+    "footer footer footer footer footer footer footer footer footer footer";
 }
 
-.parent div {
+h2 {
+  grid-area: logo;
   background-color: red;
   color: white;
-  padding: 20px;
-  font-size: 30px;
-  font-weight: bold;
-  text-align: center;
+}
+
+nav {
+  grid-area: nav;
+  background-color: blue;
+  color: white;
+}
+
+section {
+  grid-area: cont;
+  background-color: yellow;
+  color: black;
+}
+
+aside {
+  grid-area: aside;
+  background-color: green;
+  color: white;
+}
+
+footer {
+  grid-area: footer;
+  background-color: black;
+  color: white;
 }
