--- a/css/master.css
+++ b/css/master.css
@@ -1,55 +1,34 @@
 * {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
 }
 
-ul {
-  list-style: none;
-}
-
-ul li {
-  display: inline-block;
-}
-
-.page {
-  height: 100vh;
+.parent {
+  margin: 20px auto;
+  width: 800px;
+  height: 500px;
   background-color: #eee;
   display: grid;
-  grid-template-columns: repeat(10, 1fr);
-  grid-template-rows: 50px auto 50px;
-  grid-template-areas:
-    "logo logo nav nav nav nav nav nav nav nav"
-    "cont cont cont cont cont cont cont . aside aside"
-    "footer footer footer footer footer footer footer footer footer footer";
+  grid-template-columns: repeat(6, 1fr);
+  gap: 10px;
 }
 
-h2 {
-  grid-area: logo;
+.parent div {
   background-color: red;
   color: white;
+  padding: 20px;
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
 }
 
-nav {
-  grid-area: nav;
-  background-color: blue;
-  color: white;
+.one {
+  grid-row: span 4;
 }
 
-section {
-  grid-area: cont;
-  background-color: yellow;
-  color: black;
+.eight {
+  grid-row: span 2;
 }
 
-aside {
-  grid-area: aside;
-  background-color: green;
-  color: white;
-}
-
-footer {
-  grid-area: footer;
-  background-color: black;
-  color: white;
+.four {
+  grid-column: span 3;
 }
