--- a/css/master.css
+++ b/css/master.css
@@ -21,14 +21,11 @@
   text-align: center;
 }
 
-.one {
-  grid-row: span 4;
-}
-
-.eight {
-  grid-row: span 2;
-}
-
-.four {
-  grid-column: span 3;
+.nine {
+  background-color: green !important;
+  /* grid-row-start: 2;
+  grid-column-start: 2;
+  grid-row-end: 5;
+  grid-column-end: 6; */
+  grid-area: 2 / 2 / 5 / 6;
 }
