--- a/css/master.css
+++ b/css/master.css
@@ -8,7 +8,8 @@
   height: 500px;
   background-color: #eee;
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  /* grid-template-columns: repeat(6, 1fr); */
+  grid-template-areas: "head head nav nav nav" "cont cont cont cont cont";
   gap: 10px;
 }
 
@@ -21,11 +22,14 @@
   text-align: center;
 }
 
-.nine {
-  background-color: green !important;
-  /* grid-row-start: 2;
-  grid-column-start: 2;
-  grid-row-end: 5;
-  grid-column-end: 6; */
-  grid-area: 2 / 2 / 5 / 6;
+.one {
+  grid-area: head;
+}
+
+.two {
+  grid-area: nav;
+}
+
+.three {
+  grid-area: cont;
 }
